package com.programmersbox.livefrontpokedex

object Tags {
    //Global
    const val BACK_BUTTON = "BACK_BUTTON"

    //Entries Screen
    const val POKEDEX_LIST_ENTRIES = "POKEDEX_LIST_ENTRIES"
    const val POKEDEX_ENTRY_ENTRIES = "POKEDEX_ENTRY_ENTRIES"
    const val SEARCH_BAR_ENTRIES = "SEARCH_BAR_ENTRIES"
    const val SEARCH_ITEM_ENTRIES = "SEARCH_ITEM_ENTRIES"
    //Details Screen
    const val SUCCESS_DETAILS = "SUCCESS_DETAILS"
}