...

@LightAndDarkPreviews
@Composable
private fun PokedexEntryPreview() {
    LivefrontPokedexTheme {
        PokedexEntry(
            pokemon = Pokemon(name = "Pikachu", url = "https://pokeapi.co/api/v2/pokemon/25/"),
            onClick = {},
            modifier = Modifier.size(500.dp)
        )
    }
}
